crates/dsrs-macros/tests/ui/format_on_output.stderr
error: #[format] is only supported on #[input] fields
  --> tests/ui/format_on_output.rs:8:5
   |
 8 | /     #[output]
 9 | |     #[format("json")]
10 | |     answer: String,
   | |__________________^
